futher fixing of NPEs in type extractor